--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.druid</groupId>
+            <artifactId>druid-wrapper</artifactId>
+            <version>0.2.9</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
