--- a/src/test/resources/my.ini
+++ b/src/test/resources/my.ini
@@ -1,8 +1,11 @@
-#指定 securityManager 的 authenticator 实现
+[main]
+### 可以<securityManager=SecurityManager实现类>来自定义securityManager，但名字必须为securityManager，它是起始的根，默认为DefaultSecurityManager
+
+#指定 authenticator
 authenticator=org.apache.shiro.authc.pam.ModularRealmAuthenticator
 securityManager.authenticator=$authenticator
 
-#指定 securityManager.authenticator 的 authenticationStrategy
+#指定 authenticator 的 authenticationStrategy
 allSuccessfulStrategy=org.apache.shiro.authc.pam.AllSuccessfulStrategy
 securityManager.authenticator.authenticationStrategy=$allSuccessfulStrategy
 
