--- a/src/test/resources/ini.ini
+++ b/src/test/resources/ini.ini
@@ -1,10 +1,18 @@
 [users]
+#配置用户/密码及角色，格式：用户名=密码,角色1,角色2
 pwd=123,role1,role2
 allen=123456,role1
 
 [roles]
+#配置角色及权限，格式：角色=权限1,权限2
 # 可匹配pms1:开头的
 role1=pms1:*
 # 可匹配two结尾的并且有两个冒号分隔的
 role2=*:*:two
 role3=pms3:add
+
+
+[urls]
+#用于 web，提供了对 web url 拦截相关的配置，url=拦截器[参数]，拦截器
+/index.html = anon
+/admin/** = authc, roles[admin], perms["permission1"]
