--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,16 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <plugins>
