--- a/src/test/resources/my.ini
+++ b/src/test/resources/my.ini
@@ -1,5 +1,6 @@
 [main]
-### 可以<securityManager=SecurityManager实现类>来自定义securityManager，但名字必须为securityManager，它是起始的根，默认为DefaultSecurityManager
+### 可以<securityManager=SecurityManager实现类>来自定义securityManager，
+### 但名字必须为securityManager，它是起始的根，默认为DefaultSecurityManager
 
 #指定 authenticator
 authenticator=org.apache.shiro.authc.pam.ModularRealmAuthenticator
