shiro拦截链规则调整

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-
+# 这几个的注入位置在：org.apache.shiro.spring.web.config.AbstractShiroWebFilterConfiguration
 shiro:
   loginUrl: /login
   successUrl: /index
